--- a/Practice/index.html
+++ b/Practice/index.html
@@ -5,9 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practice</title>
-    <script src="./practice.js" defer></script>
+    <link rel="stylesheet" href="./styles.css">
+    <script type='module' src="./practice.js" defer></script>
 </head>
 <body>
-    <h1 style="margin: 0 auto; font-size: larger; font-weight: bold; color: red">JS PRACTICE. OPEN CONSOLE</h1>
+   <header>
+      <h1>Practice JS</h1>
+
+      <button id="menuBtn">Menu</button>
+      <nav id='nav' class="nav-dropdown">
+          <ul>
+              <li>ItemOne</li>
+              <li>ItemTwo</li>
+              <li>ItemThree</li>
+          </ul>
+      </nav>
+   </header>
 </body>
 </html>
