Dynamic UI practice

--- a/Practice/index.html
+++ b/Practice/index.html
@@ -21,5 +21,48 @@
           </ul>
       </nav>
    </header>
+   <main>
+       <!-- <section class="slideshow-wrapper">
+           <div class="image-wrapper">
+               <img src="./undraw_dev_productivity_re_fylf.svg" alt="dev_productivity">
+            </div>
+           <div class="image-wrapper">
+               <img src="./undraw_instant_analysis_re_mid5.svg" alt="instant_analysis">
+            </div>
+           <div class="image-wrapper">
+               <img src="./undraw_phone_call_re_hx6a.svg" alt="on_phone_call">
+            </div>
+           <div class="image-wrapper">
+               <img src="./undraw_professor_re_mj1s.svg" alt="professor">
+            </div>
+           <div class="image-wrapper">
+               <img src="./undraw_to_the_moon_re_q21i.svg" alt="to_the_moon">
+            </div>
+
+            <a class="prev" >&#10094;</a>
+            <a class="next" >&#10095;</a>
+       </section> -->
+
+       <form action="/my-handling-form-page" method="post">
+           <ul>
+               <li>
+                   <label for="name">Name: </label>
+                   <input type="text" id="name" name="user_name">
+                </li>
+               <li>
+                   <label for="mail">E-mail:</label>
+                   <input type="text" id="mail" name="user_email">
+                </li>
+               <li>
+                   <label for="msg">Message:</label>
+                   <textarea name="user_mesaage" id="msg">
+                   </textarea>
+                </li>
+                <li class="btn">
+                    <button type="submit">Send your message</button>
+                </li>
+           </ul>
+       </form>
+   </main>
 </body>
 </html>
