--- a/js-form-validation/index.html
+++ b/js-form-validation/index.html
@@ -35,7 +35,7 @@
 			input[type='password'] {
 				appearance: none;
 				width: 100%;
-				border: 1px solid #333;
+				border: 1px solid #dfdeda;
 				font-family: inherit;
 				font-size: 90%;
 				/* margin-bottom: 20px; */
@@ -64,6 +64,11 @@
 
 			button {
 				width: 100%;
+				font-size: 1em;
+				background-color: rgb(83, 223, 83);
+				border: 1px solid rgb(83, 223, 83);
+				padding: 0.75em;
+				cursor: pointer;
 			}
 		</style>
 	</head>
@@ -72,28 +77,34 @@
 			<div class="wrap-input">
 				<label for="email">
 					<span>Email:</span>
-					<input type="email" id="email" name="email" minlength="8" />
+					<input type="email" id="email" name="email" required />
 					<span class="error" aria-live="polite"></span>
 				</label>
 			</div>
 			<div class="wrap-input">
 				<label for="country">
 					<span>Country:</span>
-					<input type="text" id="country" name="country" />
+					<input type="text" id="country" name="country" required />
 					<span class="error" aria-live="polite"></span>
 				</label>
 			</div>
 			<div class="wrap-input">
 				<label for="zipcode">
 					<span>Zipcode:</span>
-					<input type="text" id="zipcode" name="zipcode" />
+					<input type="text" id="zipcode" name="zipcode" required />
 					<span class="error" aria-live="polite"></span>
 				</label>
 			</div>
 			<div class="wrap-input">
 				<label for="password">
 					<span>Password:</span>
-					<input type="password" id="password" name="password" minlength="8" />
+					<input
+						type="password"
+						id="password"
+						name="password"
+						required
+						minlength="8"
+					/>
 					<span class="error" aria-live="polite"></span>
 				</label>
 			</div>
@@ -105,6 +116,7 @@
 						id="password2"
 						name="password2"
 						minlength="8"
+						required
 					/>
 					<span class="error" aria-live="polite"></span>
 				</label>
@@ -117,34 +129,80 @@
 			const form = document.getElementsByTagName('form')[0];
 
 			const email = document.getElementById('email');
-			const emailError = document.querySelector('#email + span.error');
+			const country = document.getElementById('country');
+			const zipcode = document.getElementById('zipcode');
+			const password = document.getElementById('password');
+			const password2 = document.getElementById('password2');
 
-			email.addEventListener('input', (e) => {
-				if (email.validity.valid) {
-					emailError.textContent = '';
-					emailError.className = 'error';
-				} else {
-					showError();
+			//let error;
+			//document.querySelector('#email + span.error');
+			//console.log(error);
+			function clearError(e) {
+				error = e.target.closest('label').lastElementChild;
+				console.log(e.target.closest('.error'));
+				error.textContent = '';
+				error.className = 'error';
+			}
+
+			form.addEventListener('input', (e) => {
+				if (e.target.id === 'email') {
+					if (email.validity.valid) clearError(e);
+					else EmailError(e);
+				} else if (e.target.id === 'country') {
+					if (country.validity.valid) clearError(e);
+					else CountryError(e);
+				} else if (e.target.id === 'zipcode') {
+					if (zipcode.validity.valid) clearError(e);
+					else ZipcodeError(e);
+				} else if (e.target.id === 'password') {
+					if (password.validity.valid) clearError(e);
+					else PasswordError(e);
+				} else if (e.target.id === 'password2') {
+					if (password2.validity.valid) clearError(e);
+					else ConfirmPasswordError(e);
 				}
+
+				//console.log(country.validity);
+
+				// //repeat the above if-else for all other input fields
 			});
 
 			form.addEventListener('submit', (e) => {
-				if (!email.validity.valid) {
-					showError();
-					e.preventDefault();
-				}
+				if (!email.validity.valid) EmailError(e);
+
+				if (!country.validity.valid) CountryError(e);
+
+				if (!zipcode.validity.valid) ZipcodeError(e);
+
+				if (!password.validity.valid) PasswordError(e);
+
+				if (!password2.validity.valid) ConfirmPasswordError(e);
+
+				e.preventDefault();
 			});
 
-			function showError() {
+			function EmailError(e) {
+				//	console.log(e.tar);
+				let error = document.querySelector('#email + span.error');
+
 				if (email.validity.valueMissing) {
-					emailError.textContent = 'You need to enter an email address.';
+					error.textContent = 'Email address required.';
 				} else if (email.validity.typeMismatch) {
-					emailError.textContent =
-						'Entered value needs to be an e-mail address.';
-				} else if (email.validity.tooShort) {
-					emailError.textContent = `Email should be at least ${email.minLength} characters; you entered ${email.value.length}.`;
+					error.textContent = 'Enter valid e-mail address.';
 				}
-				emailError.className = 'error active';
+				error.classList.add('active');
+			}
+
+			function CountryError(e) {
+				let error = document.querySelector('#country + span.error');
+
+				if (country.validity.valueMissing) {
+					error.textContent = 'Country name required';
+				}
+				// else if (country.validity.tooShort) {
+				// 	error.textContent = `Email should be at least ${email.minLength} characters; you entered ${email.value.length}.`;
+				// }
+				error.className = 'error active';
 			}
 		</script>
 	</body>
