--- a/Practice/index.html
+++ b/Practice/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practice</title>
-    <link rel="stylesheet" href="./styles.css">
-    <script type='module' src="./practice.js" defer></script>
-</head>
-<body>
-   <header>
-      <h1>Practice JS</h1>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Practice</title>
+		<link rel="stylesheet" href="./styles.css" />
+		<script src="./practice.js" defer></script>
+	</head>
+	<body>
+		<header>
+			<h1>Practice JS</h1>
 
-      <button id="menuBtn">Menu</button>
-      <nav id='nav' class="nav-dropdown">
-          <ul>
-              <li>ItemOne</li>
-              <li>ItemTwo</li>
-              <li>ItemThree</li>
-          </ul>
-      </nav>
-   </header>
-   <main>
-       <!-- <section class="slideshow-wrapper">
+			<button id="menuBtn">Menu</button>
+			<nav id="nav" class="nav-dropdown">
+				<ul>
+					<li>ItemOne</li>
+					<li>ItemTwo</li>
+					<li>ItemThree</li>
+				</ul>
+			</nav>
+		</header>
+		<main>
+			<!-- <section class="slideshow-wrapper">
            <div class="image-wrapper">
                <img src="./undraw_dev_productivity_re_fylf.svg" alt="dev_productivity">
             </div>
@@ -43,26 +43,25 @@
             <a class="next" >&#10095;</a>
        </section> -->
 
-       <form action="/my-handling-form-page" method="post">
-           <ul>
-               <li>
-                   <label for="name">Name: </label>
-                   <input type="text" id="name" name="user_name">
-                </li>
-               <li>
-                   <label for="mail">E-mail:</label>
-                   <input type="text" id="mail" name="user_email">
-                </li>
-               <li>
-                   <label for="msg">Message:</label>
-                   <textarea name="user_mesaage" id="msg">
-                   </textarea>
-                </li>
-                <li class="btn">
-                    <button type="submit">Send your message</button>
-                </li>
-           </ul>
-       </form>
-   </main>
-</body>
+			<form action="/my-handling-form-page" method="post">
+				<ul>
+					<li>
+						<label for="name">Name: </label>
+						<input type="text" id="name" name="user_name" />
+					</li>
+					<li>
+						<label for="mail">E-mail:</label>
+						<input type="text" id="mail" name="user_email" />
+					</li>
+					<li>
+						<label for="msg">Message:</label>
+						<textarea name="user_mesaage" id="msg"> </textarea>
+					</li>
+					<li class="btn">
+						<button type="submit">Send your message</button>
+					</li>
+				</ul>
+			</form>
+		</main>
+	</body>
 </html>
