Seperate practice code into various files

--- a/Practice/index.html
+++ b/Practice/index.html
@@ -6,20 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Practice</title>
 		<link rel="stylesheet" href="./styles.css" />
-		<script src="./practice.js" defer></script>
+		<script src="./scope.js" defer></script>
 	</head>
 	<body>
 		<header>
 			<h1>Practice JS</h1>
-
-			<button id="menuBtn">Menu</button>
-			<nav id="nav" class="nav-dropdown">
-				<ul>
-					<li>ItemOne</li>
-					<li>ItemTwo</li>
-					<li>ItemThree</li>
-				</ul>
-			</nav>
 		</header>
 		<main>
 			<!-- <section class="slideshow-wrapper">
@@ -43,7 +34,7 @@
             <a class="next" >&#10095;</a>
        </section> -->
 
-			<form action="/my-handling-form-page" method="post">
+			<!-- <form action="/my-handling-form-page" method="post">
 				<ul>
 					<li>
 						<label for="name">Name: </label>
@@ -61,7 +52,7 @@
 						<button type="submit">Send your message</button>
 					</li>
 				</ul>
-			</form>
+			</form> -->
 		</main>
 	</body>
 </html>
