--- a/Kyle Simpson Courses/Advanced JS/ex4/ex4.html
+++ b/Kyle Simpson Courses/Advanced JS/ex4/ex4.html
@@ -6,6 +6,7 @@
 	<body>
 		<h1>Exercise 4</h1>
 		<script src="jquery.js"></script>
-		<script src="ex4.js"></script>
+		<!-- <script src="ex4-fixed-classic.js"></script> -->
+		<script src="ex4-fixed-oloo.js"></script>
 	</body>
 </html>
